--- a/.github/workflows/main_spinutechinterviewjayparekh-api.yml
+++ b/.github/workflows/main_spinutechinterviewjayparekh-api.yml
@@ -23,6 +23,9 @@ jobs:
 
       - name: Build with dotnet
         run: dotnet build --configuration Release
+        
+      - name: Go into the folder
+        run: cd demo-backend
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
