--- a/.github/workflows/main_spinutechinterviewjayparekh-api.yml
+++ b/.github/workflows/main_spinutechinterviewjayparekh-api.yml
@@ -22,9 +22,11 @@ jobs:
           dotnet-version: '8.x'
 
       - name: Build with dotnet
+        working-directory: demo-backend/
         run: dotnet build --configuration Release      
 
       - name: dotnet publish
+        working-directory: demo-backend/
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
