--- a/.github/workflows/main_spinutechinterviewjayparekh-api.yml
+++ b/.github/workflows/main_spinutechinterviewjayparekh-api.yml
@@ -21,13 +21,11 @@ jobs:
         with:
           dotnet-version: '8.x'
 
-      - name: Build with dotnet
-        working-directory: demo-backend/
+      - name: Build with dotnet        
         run: dotnet build --configuration Release      
 
-      - name: dotnet publish
-        working-directory: demo-backend/
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+      - name: dotnet publish        
+        run: dotnet publish -c Release
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
