--- a/demo-backend/appsettings.json
+++ b/demo-backend/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AllowedOrigins": "https://red-forest-0a0620410.5.azurestaticapps.net/;https://localhost:4200"
 }
