updating cors policy urls

--- a/demo-backend/appsettings.json
+++ b/demo-backend/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "AllowedOrigins": "https://red-forest-0a0620410.5.azurestaticapps.net/;https://localhost:4200"
+  "AllowedOrigins": "https://red-forest-0a0620410.5.azurestaticapps.net;http://localhost:4200"
 }
